@@ -1,6 +1,7 @@
 v3.0.11 - in progress
 	* Fixed library dependancies (no further requirement for -lpthread -lrt on your application)
 	* Added an RPM build script, and fixed the release_src / release_source build targets
+	* Added an ebuild script for Gentoo
 
 v3.0.10 - 4 Sept 2013
 	* Fixed xbee_frameWait()
